--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
     <td>Wed Sep 7</td>
     <td>Overview/Introduction to the Course
       <br>
-      <!-- [<a href="">slides</a>] -->
+      [<a href="slides/Week1_0907.pdf">slides</a>]
       <br>
       Introduction to R and RStudio
       <br>
@@ -260,8 +260,9 @@
     <td>
       Suggested Readings:
       <ol>
+        <li><a href="https://docs.google.com/document/d/1WgAwCMpItdMQ0ezg58gt1fzpqUIUg9iF/edit?usp=sharing&ouid=100194541158022556696&rtpof=true&sd=true">Syllabus</a></li>
+        <li>Handout Table of Contents</li>
         <li>Handout Chapter 1</li>
-        <li>Textbook p1-p24</li>
         <li><a href="readings/R_Reference_Guide.pdf">R Reference Guide</a></li>
       </ol>
     </td>
