--- a/office_hours.html
+++ b/office_hours.html
@@ -66,11 +66,11 @@
   <div class="container sec" id="main">
     <h2>Instructor Office Hours</h2>
     <ul>
-      <li><b>Yu Yang</b>: &emsp; &emsp; &emsp; Monday 9:00am - 10:00am (Ford Hall 495); Monday 10:00am - 11:00am (Zoom ID: yuyang.umn)since Week 3</li>
+      <li><b>Yu Yang</b>: &emsp; &emsp; &emsp; Monday 9:00am - 10:00am (Ford Hall 495); Monday 10:00am - 11:00am (Zoom ID: yuyang.umn) since Week 3</li>
       <li><b>Chenghao Lou</b>: &nbsp; Friday 3:00pm - 5:00pm (Ford Hall 495)</li>
       <li><b>Kaiyuan Deng</b>: &ensp; Thursday 2:00pm-4:00pm (Ford Hall 495)</li>
-      <li><b>Korey Qiang</b>: &emsp; &nbsp; Wednesday 4:00pm - 6:00pm (Zoom: id TBD)</li>
-      <li><b>Xinyi Chen</b>: &emsp; &emsp; TBD</li>
+      <li><b>Korey Qiang</b>: &emsp; &nbsp; Wednesday 4:00pm - 6:00pm (Zoom ID: 544 301 4816, <a href="https://umn.zoom.us/j/5443014816?pwd=ZUVCcjdFajA2OVRERUJHdlo2Z1ZQZz09">Zoom Link</a>)</li>
+      <li><b>Xinyi Chen</b>: &emsp; &emsp; Thursday 4:00pm - 6:00pm (Zoom ID: 269 477 2715, <a href="https://umn.zoom.us/j/2694772715">Zoom Link</a>)</li>
     </ul>
   </div>
 </div>
