--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <h3>Teaching Assistants</h3>
       <a href="">
       <div class="instructor">
-        <div class="instructorphoto"><img src="images/smile.png"></div>
+        <div class="instructorphoto"><img src="images/Chenghao_Lou.jpg"></div>
         <div>Chenghao Lou</div>
       </div>
       </a>
