update 0907 slides; add rstudio cloud guide

--- a/index.html
+++ b/index.html
@@ -264,6 +264,7 @@
         <li>Handout Table of Contents</li>
         <li>Handout Chapter 1</li>
         <li><a href="readings/R_Reference_Guide.pdf">R Reference Guide</a></li>
+        <li><a href="https://rstudio.cloud/learn/guide">RStudio Cloud Guide</a></li>
       </ol>
     </td>
   </tr>
