--- a/index.html
+++ b/index.html
@@ -249,9 +249,10 @@
 
   <tr>
     <td>Wed Sep 7</td>
-    <td>Overview/Introduction to the Course
+    <td>Course Overview
       <br>
-      [<a href="slides/Week1_0907.pdf">slides</a>]
+      [<a href="slides/Course_Overview.pdf">slides</a>]
+      <br>
       <br>
       Introduction to R and RStudio
       <br>
@@ -268,31 +269,29 @@
       </ol>
     </td>
   </tr>
-<!-- 
+
   <tr>
     <td>Fri Sep 9</td>
-    <td>Word Vectors 2 and Word Window Classification
+    <td>Chapter 1: Introduction
       <br>
-      [<a href="slides/cs224n-2022-lecture02-wordvecs2.pdf">slides</a>]
-      [<a href="readings/cs224n-2019-notes02-wordvecs2.pdf">notes</a>]
+      [<a href="slides/Chapter1.pdf">slides</a>]
+      <br>
+      <br>
+      Chapter 2: Exploring Data
     </td>
+
     <td>
       Suggested Readings:
       <ol>
-        <li><a href="http://nlp.stanford.edu/pubs/glove.pdf">GloVe: Global Vectors for Word Representation</a> (original GloVe paper)</li>
-        <li><a href="http://www.aclweb.org/anthology/Q15-1016">Improving Distributional Similarity with Lessons Learned from Word Embeddings</a></li>
-        <li><a href="http://www.aclweb.org/anthology/D15-1036">Evaluation methods for unsupervised word embeddings</a></li>
-      </ol>
-      Additional Readings:
-      <ol>
-        <li><a href="http://aclweb.org/anthology/Q16-1028">A Latent Variable Model Approach to PMI-based Word Embeddings</a></li>
-        <li><a href="https://transacl.org/ojs/index.php/tacl/article/viewFile/1346/320">Linear Algebraic Structure of Word Senses, with Applications to Polysemy</a></li>
-        <li><a href="https://papers.nips.cc/paper/7368-on-the-dimensionality-of-word-embedding.pdf">On the Dimensionality of Word Embedding</a></li>
+        <li>Handout Chapter 1</li>
+        <li>Textbook p1 - p24</li>
       </ol>
     </td>
     <td></td>
     <td></td>
   </tr>
+<!-- 
+
 
   <tr>
     <td>Mon Sep 12</td>
