add materials folder; replace syllabus with pdf version

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="https://docs.google.com/document/d/1WgAwCMpItdMQ0ezg58gt1fzpqUIUg9iF/edit?usp=sharing&ouid=100194541158022556696&rtpof=true&sd=true">Syllabus</a></li>
+        <li><a href="materials/Syllabus_STAT3011_Sec006.pdf">Syllabus</a></li>
         <li><a href="index.html#coursework">Coursework</a></li>
         <li><a href="index.html#schedule">Schedule</a></li>
         <li><a href="office_hours.html">Office Hours</a></li>
@@ -261,7 +261,7 @@
     <td>
       Suggested Readings:
       <ol>
-        <li><a href="https://docs.google.com/document/d/1WgAwCMpItdMQ0ezg58gt1fzpqUIUg9iF/edit?usp=sharing&ouid=100194541158022556696&rtpof=true&sd=true">Syllabus</a></li>
+        <li><a href="materials/Syllabus_STAT3011_Sec006.pdf">Syllabus</a></li>
         <li>Handout Table of Contents</li>
         <li>Handout Chapter 1</li>
         <li><a href="readings/R_Reference_Guide.pdf">R Reference Guide</a></li>
