update ch1; add ch2 slides; add ch2 code; add lab0

--- a/index.html
+++ b/index.html
@@ -278,6 +278,9 @@
       <br>
       <br>
       Chapter 2: Exploring Data
+      <br>
+      [<a href="slides/Chapter2.pdf">slides</a>]
+      [<a href="code/chapter2.R">code</a>]
     </td>
 
     <td>
@@ -285,11 +288,53 @@
       <ol>
         <li>Handout Chapter 1</li>
         <li>Textbook p1 - p24</li>
+        <li>Handout Chapter 2.1, 2.2.1, 2.3</li>
+      </ol>
+    </td>
+    <td>
+      HW 0 <b><font color="green">out</font></b>
+      <br>
+      <br>
+      Make-up Exam Sign-up <b><font color="green">available</font></b>
+    </td>
+    <td>
+      HW 0 <b><font color="red">due</font></b>
+    </td>
+  </tr>
+
+  <tr>
+    <td>Mon Sep 12</td>
+    <td>
+      Chapter 2: Exploring Data
+      <br>
+      <!-- [<a href="slides/Chapter2.pdf">slides</a>]
+      [<a href="code/chapter2.R">code</a>] -->
+    </td>
+
+    <td>
+      Suggested Readings:
+      <ol>
+        <li>Handout Chapter 2.2, 2.3</li>
       </ol>
     </td>
     <td></td>
     <td></td>
   </tr>
+
+  <tr class="warning">
+    <td>Tue Sep 13</td>
+    <td>Lab 0: Data Importing and Data Summaries
+    </td>
+    <td>
+      Suggested Readings:
+      <ol>
+        <li><a href="lab/Lab0_3011_F22.pdf">Lab 0 Handout</a></li>
+      </ol>
+    </td>
+    <td></td>
+    <td></td>
+    </tr>
+
 <!-- 
 
 
