add survey data

--- a/index.html
+++ b/index.html
@@ -281,6 +281,7 @@
       <br>
       [<a href="slides/Chapter2.pdf">slides</a>]
       [<a href="code/chapter2.R">code</a>]
+      [<a href="data/Getting_to_Know_You_Survey_Fall_2022.csv">data</a>]
     </td>
 
     <td>
