--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
     <td>
       Suggested Readings:
       <ol>
-        <li>Handout Chapter 2.2, 2.3</li>
+        <li>Handout Chapter 2.3</li>
       </ol>
     </td>
     <td></td>
@@ -337,6 +337,25 @@
     <td></td>
     </tr>
 
+    <tr>
+      <td>Wed Sep 14</td>
+      <td>
+        Chapter 2: Exploring Data
+        <br>
+        [<a href="slides/Chapter2.pdf">slides</a>]
+        [<a href="code/chapter2.R">code</a>]
+        [<a href="data/Getting_to_Know_You_Survey_Fall_2022.csv">data</a>]
+      </td>
+  
+      <td>
+        Suggested Readings:
+        <ol>
+          <li>Handout Chapter 2.2, 2.3</li>
+        </ol>
+      </td>
+      <td></td>
+      <td></td>
+    </tr>
 <!-- 
 
 
