update ch2 code; add chap4 slides; update syllabus

--- a/index.html
+++ b/index.html
@@ -356,6 +356,27 @@
       <td></td>
       <td></td>
     </tr>
+
+    <tr>
+      <td>Fri Sep 16</td>
+      <td>
+        Chapter 4: Gathering Data
+        <br>
+        [<a href="slides/Chapter4.pdf">slides</a>]
+      </td>
+  
+      <td>
+        Suggested Readings:
+        <ol>
+          <li>Handout Chapter 4</li>
+          <li>Textbook p153-172</li>
+        </ol>
+      </td>
+      <td>
+        HW 1 <b><font color="green">out</font></b>
+      </td>
+      <td></td>
+    </tr>
 <!-- 
 
 
