add hyperlinks to events

--- a/index.html
+++ b/index.html
@@ -293,10 +293,10 @@
       </ol>
     </td>
     <td>
-      HW 0 <b><font color="green">out</font></b>
+      <a href="https://canvas.umn.edu/courses/330825/assignments/2779169">HW 0</a> <b><font color="green">out</font></b>
       <br>
       <br>
-      Make-up Exam Sign-up <b><font color="green">available</font></b>
+      <a href="https://canvas.umn.edu/courses/330825/pages/make-up-exams-sign-up?module_item_id=8872709">Make-up Exam Sign-up</a>  <b><font color="green">available</font></b>
     </td>
     <td>
       HW 0 <b><font color="red">due</font></b>
