--- a/index.html
+++ b/index.html
@@ -353,7 +353,9 @@
           <li>Handout Chapter 2.2, 2.3</li>
         </ol>
       </td>
-      <td></td>
+      <td>
+        <a href="materials/old_exams.zip">Old Exams</a> <b><font color="green">out</font></b>
+      </td>
       <td></td>
     </tr>
 
