--- a/index.html
+++ b/index.html
@@ -379,6 +379,26 @@
       </td>
       <td></td>
     </tr>
+
+    <tr>
+      <td>Mon Sep 19</td>
+      <td>
+        Chapter 5: Probability
+        <br>
+        [<a href="slides/Chapter5.pdf">slides</a>]
+        [<a href="code/chapter5.R">code</a>]
+      </td>
+  
+      <td>
+        Suggested Readings:
+        <ol>
+          <li>Handout Chapter 5</li>
+          <li>Textbook p200-232</li>
+        </ol>
+      </td>
+      <td></td>
+      <td></td>
+    </tr>
 <!-- 
 
 
