add office hour vote; add 0921

--- a/index.html
+++ b/index.html
@@ -355,6 +355,9 @@
       </td>
       <td>
         <a href="materials/old_exams.zip">Old Exams</a> <b><font color="green">out</font></b>
+        <br>
+        <br>
+        <a href="https://www.when2meet.com/?16829173-N2ITt">Office Hour Vote</a> <b><font color="green">out</font></b>
       </td>
       <td></td>
     </tr>
@@ -377,7 +380,9 @@
       <td>
         HW 1 <b><font color="green">out</font></b>
       </td>
-      <td></td>
+      <td>
+        Office Hour Vote <b><font color="red">due</font></b>
+      </td>
     </tr>
 
     <tr>
@@ -387,6 +392,25 @@
         <br>
         [<a href="slides/Chapter5.pdf">slides</a>]
         [<a href="code/chapter5.R">code</a>]
+      </td>
+  
+      <td>
+        Suggested Readings:
+        <ol>
+          <li>Handout Chapter 5</li>
+          <li>Textbook p200-232</li>
+        </ol>
+      </td>
+      <td></td>
+      <td></td>
+    </tr>
+
+    <tr>
+      <td>Wed Sep 21</td>
+      <td>
+        Chapter 5: Probability
+        <br>
+        [<a href="slides/Chapter5.pdf">slides</a>]
       </td>
   
       <td>
