--- a/index.html
+++ b/index.html
@@ -405,6 +405,20 @@
       <td></td>
     </tr>
 
+    <tr class="warning">
+      <td>Tue Sep 20</td>
+      <td>Lab 1
+      </td>
+      <td>
+        Suggested Readings:
+        <ol>
+          <li><a href="lab/Lab1_3011_F22.pdf">Lab 1 Handout</a></li>
+        </ol>
+      </td>
+      <td></td>
+      <td></td>
+      </tr>
+
     <tr>
       <td>Wed Sep 21</td>
       <td>
