--- a/index.html
+++ b/index.html
@@ -171,6 +171,16 @@
         <a href="https://canvas.umn.edu/courses/330825/files/30096811?module_item_id=8785806">STAT 3011 Handout (Fall 2022)</a>
       </li>
     </ul>
+
+    <h3>Helpful Resources</h3>
+  <p>
+    The following resources are helpful, but none are required.
+  </p>
+  <ul>
+      <li>
+          <a href="https://www.openintro.org/book/isrs/">OpenIntro: Introductory Statistics with Randomization and Simulation</a>
+      </li>
+    </ul>
 </div>
 
 
