add zoom link to 0916

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
     </tr>
 
     <tr>
-      <td>Fri Sep 16</td>
+      <td>Fri Sep 16 <br> [<a href="https://umn.zoom.us/my/yuyang.umn">Zoom</a>]</td>
       <td>
         Chapter 4: Gathering Data
         <br>
