--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
         </ol>
       </td>
       <td>
-        HW 1 <b><font color="green">out</font></b>
+        <a href="homework/HW1Problems.pdf">HW 1</a> <b><font color="green">out</font></b>
       </td>
       <td>
         Office Hour Vote <b><font color="red">due</font></b>
