update week 3 schedule

--- a/index.html
+++ b/index.html
@@ -396,7 +396,11 @@
     </tr>
 
     <tr>
-      <td>Mon Sep 19</td>
+      <td>
+        Mon Sep 19
+        <br>
+        [Zoom Recording on Canvas]
+      </td>
       <td>
         Chapter 5: Probability
         <br>
@@ -430,7 +434,11 @@
       </tr>
 
     <tr>
-      <td>Wed Sep 21</td>
+      <td>
+        Wed Sep 21
+        <br>
+        [Zoom Recording on Canvas]
+      </td>
       <td>
         Chapter 5: Probability
         <br>
