--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
       <td>
         Mon Sep 19
         <br>
-        [Zoom Recording on Canvas]
+        [<a href="https://canvas.umn.edu/courses/330825/external_tools/24">Zoom Recordings</a>]
       </td>
       <td>
         Chapter 5: Probability
@@ -437,7 +437,7 @@
       <td>
         Wed Sep 21
         <br>
-        [Zoom Recording on Canvas]
+        [Zoom Recording]
       </td>
       <td>
         Chapter 5: Probability
