--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
       <td>
         Wed Sep 21
         <br>
-        [Zoom Recording]
+        [<a href="https://canvas.umn.edu/courses/330825/external_tools/24">Zoom Recording</a>]
       </td>
       <td>
         Chapter 5: Probability
@@ -454,6 +454,30 @@
       </td>
       <td></td>
       <td></td>
+    </tr>
+
+    <tr>
+      <td>Fri Sep 23 <br> [<a href="https://umn.zoom.us/my/yuyang.umn">Zoom</a>]</td>
+      <td>
+        Chapter 6: Probability Distribution
+        <br>
+        [<a href="slides/Chapter6.pdf">slides</a>]
+      </td>
+  
+      <td>
+        Suggested Readings:
+        <ol>
+          <li>Handout Chapter 6.1, 6.3</li>
+          <li>Textbook p254-266, p279-289</li>
+          <li><a href="https://xmind.works/#/share/2gV13qT7">Chapter 5, 6 Mindmap</a></li>
+        </ol>
+      </td>
+      <td>
+        HW 2 <b><font color="green">out</font></b>
+      </td>
+      <td>
+        HW 1 <b><font color="red">due on Sunday</font></b>
+      </td>
     </tr>
 <!-- 
 
