--- a/index.html
+++ b/index.html
@@ -459,6 +459,9 @@
     <tr>
       <td>Fri Sep 23 <br> [<a href="https://umn.zoom.us/my/yuyang.umn">Zoom</a>]</td>
       <td>
+        Review Chapter 5
+        <br>
+        <br>
         Chapter 6: Probability Distribution
         <br>
         [<a href="slides/Chapter6.pdf">slides</a>]
@@ -479,6 +482,39 @@
         HW 1 <b><font color="red">due on Sunday</font></b>
       </td>
     </tr>
+
+    <tr>
+      <td>Mon Sep 26</td>
+      <td>
+        Chapter 6: Probability Distribution
+        <br>
+        [<a href="slides/Chapter6.pdf">slides</a>]
+      </td>
+  
+      <td>
+        Suggested Readings:
+        <ol>
+          <li>Handout Chapter 6.3</li>
+          <li>Textbook p279-289</li>
+        </ol>
+      </td>
+      <td></td>
+      <td></td>
+    </tr>
+
+    <tr class="warning">
+      <td>Tue Sep 27</td>
+      <td>Lab 2
+      </td>
+      <td>
+        Suggested Readings:
+        <ol>
+          <li><a href="lab/Lab_Week4.pdf">Lab 2 Handout</a></li>
+        </ol>
+      </td>
+      <td></td>
+      <td></td>
+      </tr>
 <!-- 
 
 
