--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
         </ol>
       </td>
       <td>
-        HW 2 <b><font color="green">out</font></b>
+        <a href="homework/HW2Problems.pdf">HW 2</a> <b><font color="green">out</font></b>
       </td>
       <td>
         HW 1 <b><font color="red">due on Sunday</font></b>
