--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
     </tr>
 
     <tr>
-      <td>Mon Sep 26</td>
+      <td>Mon Sep 26 <br> [<a href="https://umn.zoom.us/my/yuyang.umn">Zoom</a>]</td>
       <td>
         Chapter 6: Probability Distribution
         <br>
