update 0926; add chapter6 code

--- a/index.html
+++ b/index.html
@@ -489,6 +489,7 @@
         Chapter 6: Probability Distribution
         <br>
         [<a href="slides/Chapter6.pdf">slides</a>]
+        [<a href="code/chapter6.R">code</a>]
       </td>
   
       <td>
