--- a/index.html
+++ b/index.html
@@ -516,6 +516,26 @@
       <td></td>
       <td></td>
       </tr>
+
+      <tr>
+        <td>Wed Sep 28</td>
+        <td>
+          Chapter 6: Probability Distribution
+          <br>
+          [<a href="slides/Chapter6.pdf">slides</a>]
+          [<a href="code/chapter6.R">code</a>]
+        </td>
+    
+        <td>
+          Suggested Readings:
+          <ol>
+            <li>Handout Chapter 6.2</li>
+            <li>Textbook p267-279</li>
+          </ol>
+        </td>
+        <td></td>
+        <td></td>
+      </tr>
 <!-- 
 
 
