add ta hiring info

--- a/index.html
+++ b/index.html
@@ -533,7 +533,9 @@
             <li>Textbook p267-279</li>
           </ol>
         </td>
-        <td></td>
+        <td>
+          <a href="materials/STAT_Undergrad_TA_Spring_2023 _Flyer.pdf">Spring23 TA Hiring</a> <b><font color="green">out</font></b>
+        </td>
         <td></td>
       </tr>
 <!-- 
