update chap6; add chap7

--- a/index.html
+++ b/index.html
@@ -499,7 +499,9 @@
           <li>Textbook p279-289</li>
         </ol>
       </td>
-      <td></td>
+      <td>
+        HW 1 Solution <b><font color="green">out</font></b>
+      </td>
       <td></td>
     </tr>
 
@@ -535,6 +537,37 @@
         </td>
         <td>
           <a href="materials/STAT_Undergrad_TA_Spring_2023 _Flyer.pdf">Spring23 TA Hiring</a> <b><font color="green">out</font></b>
+        </td>
+        <td></td>
+      </tr>
+
+      <tr>
+        <td>Fri Sep 30</td>
+        <td>
+          Chapter 6: Probability Distribution
+          <br>
+          [<a href="slides/Chapter6.pdf">slides</a>]
+          [<a href="code/chapter6.R">code</a>]
+
+          <br>
+          <br>
+          Chapter 7: Sampling Distributions
+          <br>
+          [<a href="slides/Chapter7.pdf">slides</a>]
+          [<a href="code/chapter7.R">code</a>]
+        </td>
+    
+        <td>
+          Suggested Readings:
+          <ol>
+            <li>Handout Chapter 6.2</li>
+            <li>Textbook p267-279</li>
+            <li>Handout Chapter 7</li>
+            <li>Textbook p298-323</li>
+          </ol>
+        </td>
+        <td>
+          HW 3 <b><font color="green">out</font></b>
         </td>
         <td></td>
       </tr>
