--- a/index.html
+++ b/index.html
@@ -567,9 +567,11 @@
           </ol>
         </td>
         <td>
-          HW 3 <b><font color="green">out</font></b>
+          <a href="homework/HW3Problems.pdf">HW 3</a> <b><font color="green">out</font></b>
         </td>
-        <td></td>
+        <td>
+          HW 2 <b><font color="red">due on Sunday</font></b>
+        </td>
       </tr>
 <!-- 
 
