--- a/index.html
+++ b/index.html
@@ -567,7 +567,8 @@
           </ol>
         </td>
         <td>
-          <a href="homework/HW3Problems.pdf">HW 3</a> <b><font color="green">out</font></b>
+          HW 3 <b><font color="green">out</font></b>
+          <!-- <a href="homework/HW3Problems.pdf">HW 3</a> <b><font color="green">out</font></b> -->
         </td>
         <td>
           HW 2 <b><font color="red">due on Sunday</font></b>
