--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
       <td>
         Suggested Readings:
         <ol>
-          <li><a href="lab/Lab_Week4.pdf">Lab 2 Handout</a></li>
+          <li><a href="lab/Lab2_3011_F22.pdf">Lab 2 Handout</a></li>
         </ol>
       </td>
       <td></td>
@@ -574,6 +574,40 @@
           HW 2 <b><font color="red">due on Sunday</font></b>
         </td>
       </tr>
+
+      <tr>
+        <td>Mon Oct 3</td>
+        <td>
+          Chapter 7: Sampling Distributions
+          <br>
+          [<a href="slides/Chapter7.pdf">slides</a>]
+          [<a href="code/chapter7.R">code</a>]
+        </td>
+    
+        <td>
+          Suggested Readings:
+          <ol>
+            <li>Handout Chapter 7</li>
+            <li>Textbook p298-323</li>
+          </ol>
+        </td>
+        <td></td>
+        <td></td>
+      </tr>
+
+      <tr class="warning">
+        <td>Tue Oct 4</td>
+        <td>Lab 3
+        </td>
+        <td>
+          Suggested Readings:
+          <ol>
+            <li><a href="lab/Lab3_3011_F22.pdf">Lab 3 Handout</a></li>
+          </ol>
+        </td>
+        <td></td>
+        <td></td>
+        </tr>
 <!-- 
 
 
