update slides; unhide hw3

--- a/index.html
+++ b/index.html
@@ -548,13 +548,6 @@
           <br>
           [<a href="slides/Chapter6.pdf">slides</a>]
           [<a href="code/chapter6.R">code</a>]
-
-          <br>
-          <br>
-          Chapter 7: Sampling Distributions
-          <br>
-          [<a href="slides/Chapter7.pdf">slides</a>]
-          [<a href="code/chapter7.R">code</a>]
         </td>
     
         <td>
@@ -562,13 +555,10 @@
           <ol>
             <li>Handout Chapter 6.2</li>
             <li>Textbook p267-279</li>
-            <li>Handout Chapter 7</li>
-            <li>Textbook p298-323</li>
           </ol>
         </td>
         <td>
-          HW 3 <b><font color="green">out</font></b>
-          <!-- <a href="homework/HW3Problems.pdf">HW 3</a> <b><font color="green">out</font></b> -->
+          <a href="homework/HW3Problems.pdf">HW 3</a> <b><font color="green">out</font></b>
         </td>
         <td>
           HW 2 <b><font color="red">due on Sunday</font></b>
@@ -578,6 +568,12 @@
       <tr>
         <td>Mon Oct 3</td>
         <td>
+          Chapter 6: Probability Distribution
+          <br>
+          [<a href="slides/Chapter6.pdf">slides</a>]
+          [<a href="code/chapter6.R">code</a>]
+          <br>
+          <br>
           Chapter 7: Sampling Distributions
           <br>
           [<a href="slides/Chapter7.pdf">slides</a>]
@@ -608,81 +604,7 @@
         <td></td>
         <td></td>
         </tr>
-<!-- 
 
-
-  <tr>
-    <td>Mon Sep 12</td>
-    <td>Word Vectors 2 and Word Window Classification
-      <br>
-      [<a href="slides/cs224n-2022-lecture02-wordvecs2.pdf">slides</a>]
-      [<a href="readings/cs224n-2019-notes02-wordvecs2.pdf">notes</a>]
-    </td>
-    <td>
-      Suggested Readings:
-      <ol>
-        <li><a href="http://nlp.stanford.edu/pubs/glove.pdf">GloVe: Global Vectors for Word Representation</a> (original GloVe paper)</li>
-        <li><a href="http://www.aclweb.org/anthology/Q15-1016">Improving Distributional Similarity with Lessons Learned from Word Embeddings</a></li>
-        <li><a href="http://www.aclweb.org/anthology/D15-1036">Evaluation methods for unsupervised word embeddings</a></li>
-      </ol>
-      Additional Readings:
-      <ol>
-        <li><a href="http://aclweb.org/anthology/Q16-1028">A Latent Variable Model Approach to PMI-based Word Embeddings</a></li>
-        <li><a href="https://transacl.org/ojs/index.php/tacl/article/viewFile/1346/320">Linear Algebraic Structure of Word Senses, with Applications to Polysemy</a></li>
-        <li><a href="https://papers.nips.cc/paper/7368-on-the-dimensionality-of-word-embedding.pdf">On the Dimensionality of Word Embedding</a></li>
-      </ol>
-    </td>
-    <td></td>
-    <td></td>
-  </tr>
-
-  <tr class="warning">
-    <td>Tue Sep 13</td>
-    <td>Introduction to R and RStudio
-        <br>
-        [<a href="readings/cs224n-python-review.pdf">slides</a>]
-        [<a href="readings/python_tutorial.ipynb">notebook</a>]
-    </td>
-    <td>
-        <i class="fa fa-clock-o"></i> 1:30pm - 2:30pm<br>Remote (link on Canvas)
-    </td>
-    <td></td>
-    <td></td>
-    </tr>
-
-  <tr>
-    <td>Wed Sep 14</td>
-    <td>Backprop and Neural Networks
-      <br>
-      [<a href="slides/cs224n-2022-lecture03-neuralnets.pdf">slides</a>]
-      [<a href="readings/cs224n-2019-notes03-neuralnets.pdf">notes</a>]
-    </td>
-    <td>
-      Suggested Readings:
-      <ol>
-        <li><a href="readings/gradient-notes.pdf">matrix calculus notes</a></li>
-        <li><a href="readings/review-differential-calculus.pdf">Review of differential calculus</a></li>
-        <li><a href="http://cs231n.github.io/neural-networks-1/">CS231n notes on network architectures</a></li>
-        <li><a href="http://cs231n.github.io/optimization-2/">CS231n notes on backprop</a></li>
-        <li><a href="http://cs231n.stanford.edu/handouts/derivatives.pdf">Derivatives, Backpropagation, and Vectorization</a></li>
-        <li><a href="http://www.iro.umontreal.ca/~vincentp/ift3395/lectures/backprop_old.pdf">Learning Representations by Backpropagating Errors</a> (seminal Rumelhart et al. backpropagation paper)</li>
-      </ol>
-      Additional Readings:
-      <ol>
-        <li><a href="https://medium.com/@karpathy/yes-you-should-understand-backprop-e2f06eab496b">Yes you should understand backprop</a></li>
-        <li><a href="http://www.jmlr.org/papers/volume12/collobert11a/collobert11a.pdf">Natural Language Processing (Almost) from Scratch</a></li>
-      </ol>
-    </td>
-    <td>
-      Assignment 2 <b><font color="green">out</font></b>
-      <br>
-      [<a href="assignments/a2.zip">code</a>]<br>
-      [<a href="assignments/a2.pdf">handout</a>]<br>
-      [<a href="assignments/a2_latex_template.zip">latex template</a>]
-    </td>
-    <td>Assignment 1 <b><font color="red">due</font></b></td>
-  </tr>
- -->
 
   </tbody>
 </table>
