--- a/office_hours.html
+++ b/office_hours.html
@@ -43,12 +43,12 @@
   
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
+          <li><a href="materials/Syllabus_STAT3011_Sec006.pdf">Syllabus</a></li>
           <li><a href="index.html#coursework">Coursework</a></li>
           <li><a href="index.html#schedule">Schedule</a></li>
           <li><a href="office_hours.html">Office Hours</a></li>
-          <li><a href="project.html">Practical projects</a></li>
-          <li><a href="https://campuswire.com/p/G50FDD740">Discussion Forum</a></li>  
-           <!-- #TODO add canvas link -->
+          <li><a href="https://campuswire.com/p/G50FDD740">Campuswire Forum</a></li>  
+          <li><a href="https://canvas.umn.edu/courses/330825">Canvas</a></li>  
         </ul>
       </div>
     </div>
