update chapter 7 slides; update event

--- a/index.html
+++ b/index.html
@@ -587,7 +587,9 @@
             <li>Textbook p298-323</li>
           </ol>
         </td>
-        <td></td>
+        <td>
+          HW 2 Solution <b><font color="green">out</font></b>
+        </td>
         <td></td>
       </tr>
 
