update slides; add ex6_8 correction

--- a/index.html
+++ b/index.html
@@ -589,6 +589,9 @@
         </td>
         <td>
           HW 2 Solution <b><font color="green">out</font></b>
+          <br>
+          <br>
+          <a href="slides/Example_6_8_Correction.pdf">Example 6.8 Correction</a> <b><font color="green">out</font></b>
         </td>
         <td></td>
       </tr>
@@ -606,7 +609,26 @@
         <td></td>
         <td></td>
         </tr>
-
+      
+        <tr>
+          <td>Wed Oct 5</td>
+          <td>
+            Chapter 7: Sampling Distributions
+            <br>
+            [<a href="slides/Chapter7.pdf">slides</a>]
+            [<a href="code/chapter7.R">code</a>]
+          </td>
+      
+          <td>
+            Suggested Readings:
+            <ol>
+              <li>Handout Chapter 7</li>
+              <li>Textbook p298-323</li>
+            </ol>
+          </td>
+          <td></td>
+          <td></td>
+        </tr>
 
   </tbody>
 </table>
