--- a/index.html
+++ b/index.html
@@ -592,6 +592,9 @@
           <br>
           <br>
           <a href="slides/Example_6_8_Correction.pdf">Example 6.8 Correction</a> <b><font color="green">out</font></b>
+          <br>
+          <br>
+          HW 1 Grade <b><font color="green">out</font></b>
         </td>
         <td></td>
       </tr>
