--- a/index.html
+++ b/index.html
@@ -633,6 +633,26 @@
           <td></td>
         </tr>
 
+        <tr>
+          <td>Fri Oct 7</td>
+          <td>
+            Chapter 7: Sampling Distributions
+            <br>
+            [<a href="slides/Chapter7.pdf">slides</a>]
+            [<a href="code/chapter7.R">code</a>]
+          </td>
+      
+          <td>
+            Suggested Readings:
+            <ol>
+              <li>Handout Chapter 7</li>
+              <li>Textbook p298-323</li>
+            </ol>
+          </td>
+          <td></td>
+          <td></td>
+        </tr>
+
   </tbody>
 </table>
 </div> 
