--- a/index.html
+++ b/index.html
@@ -640,6 +640,11 @@
             <br>
             [<a href="slides/Chapter7.pdf">slides</a>]
             [<a href="code/chapter7.R">code</a>]
+            <br>
+            <br>
+            Chapter 8: Confidence intervals
+            <br>
+            [<a href="slides/Chapter8.pdf">slides</a>]
           </td>
       
           <td>
@@ -647,6 +652,7 @@
             <ol>
               <li>Handout Chapter 7</li>
               <li>Textbook p298-323</li>
+              <li>Handout Chapter 8.1</li>
             </ol>
           </td>
           <td></td>
