update chapter8 material

--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
         <ol>
           <li>Handout Chapter 6.1, 6.3</li>
           <li>Textbook p254-266, p279-289</li>
-          <li><a href="https://xmind.works/#/share/2gV13qT7">Chapter 5, 6 Mindmap</a></li>
+          <li><a href="https://xmind.works/#/share/6xlxBfbG">Chapter 5, 6 Mindmap</a></li>
         </ol>
       </td>
       <td>
@@ -642,9 +642,10 @@
             [<a href="code/chapter7.R">code</a>]
             <br>
             <br>
-            Chapter 8: Confidence intervals
+            Chapter 8: Confidence Intervals
             <br>
             [<a href="slides/Chapter8.pdf">slides</a>]
+            [<a href="code/chapter8.R">code</a>]
           </td>
       
           <td>
@@ -653,11 +654,46 @@
               <li>Handout Chapter 7</li>
               <li>Textbook p298-323</li>
               <li>Handout Chapter 8.1</li>
+              <li><a href="https://xmind.works/#/share/6xlxBfbG">Chapter 8 Mindmap</a></li>
             </ol>
           </td>
           <td></td>
           <td></td>
         </tr>
+
+        <tr>
+          <td>Mon Oct 10</td>
+          <td>
+            Chapter 8: Confidence Intervals
+            <br>
+            [<a href="slides/Chapter8.pdf">slides</a>]
+            [<a href="code/chapter8.R">code</a>]
+          </td>
+      
+          <td>
+            Suggested Readings:
+            <ol>
+              <li>Handout Chapter 8.2.1</li>
+              <li>Textbook p334-353, p365-368</li>
+            </ol>
+          </td>
+          <td></td>
+          <td></td>
+        </tr>
+
+        <tr class="warning">
+          <td>Tue Oct 11</td>
+          <td>Lab 4
+          </td>
+          <td>
+            Suggested Readings:
+            <ol>
+              <li>Lab 4 Handout</li>
+            </ol>
+          </td>
+          <td></td>
+          <td></td>
+          </tr>
 
   </tbody>
 </table>
