--- a/index.html
+++ b/index.html
@@ -657,8 +657,12 @@
               <li><a href="https://xmind.works/#/share/6xlxBfbG">Chapter 8 Mindmap</a></li>
             </ol>
           </td>
-          <td></td>
-          <td></td>
+          <td>
+            <a href="homework/HW4Problems.pdf">HW 4</a> <b><font color="green">out</font></b>
+          </td>
+          <td>
+            HW 3 <b><font color="red">due on Sunday</font></b>
+          </td>
         </tr>
 
         <tr>
@@ -688,7 +692,7 @@
           <td>
             Suggested Readings:
             <ol>
-              <li>Lab 4 Handout</li>
+              <li><a href="lab/Lab4_3011_F22.pdf">Lab 4 Handout</a></li>
             </ol>
           </td>
           <td></td>
