--- a/index.html
+++ b/index.html
@@ -659,6 +659,9 @@
           </td>
           <td>
             <a href="homework/HW4Problems.pdf">HW 4</a> <b><font color="green">out</font></b>
+            <br>
+            <br>
+            <a href="materials/StudyGuideDoc.zip">Study Guide</a> <b><font color="green">out</font></b>
           </td>
           <td>
             HW 3 <b><font color="red">due on Sunday</font></b>
