update chap8; update schedule

--- a/index.html
+++ b/index.html
@@ -684,7 +684,12 @@
               <li>Textbook p334-353, p365-368</li>
             </ol>
           </td>
-          <td></td>
+          <td>
+            HW 3 Solution <b><font color="green">out</font></b>
+            <br>
+            <br>
+            HW 2 Grade <b><font color="green">out</font></b>
+          </td>
           <td></td>
         </tr>
 
@@ -701,6 +706,28 @@
           <td></td>
           <td></td>
           </tr>
+
+        <tr>
+          <td>Wed Oct 12</td>
+          <td>
+            Chapter 8: Confidence Intervals
+            <br>
+            [<a href="slides/Chapter8.pdf">slides</a>]
+            [<a href="code/chapter8.R">code</a>]
+          </td>
+      
+          <td>
+            Suggested Readings:
+            <ol>
+              <li>Handout Chapter 8.2.1</li>
+              <li>Textbook p334-353, p365-368</li>
+              <li>Handout Chapter 8.2.2</li>
+              <li>Textbook p354-364, p368-370</li>
+            </ol>
+          </td>
+          <td></td>
+          <td></td>
+        </tr>
 
   </tbody>
 </table>
