--- a/index.html
+++ b/index.html
@@ -721,12 +721,34 @@
             <ol>
               <li>Handout Chapter 8.2.1</li>
               <li>Textbook p334-353, p365-368</li>
+            </ol>
+          </td>
+          <td></td>
+          <td></td>
+        </tr>
+
+        <tr>
+          <td>Fri Oct 14</td>
+          <td>
+            Chapter 8: Confidence Intervals
+            <br>
+            [<a href="slides/Chapter8.pdf">slides</a>]
+            [<a href="code/chapter8.R">code</a>]
+          </td>
+      
+          <td>
+            Suggested Readings:
+            <ol>
+              <li>Handout Chapter 8.2.1</li>
+              <li>Textbook p334-353, p365-368</li>
               <li>Handout Chapter 8.2.2</li>
               <li>Textbook p354-364, p368-370</li>
             </ol>
           </td>
           <td></td>
-          <td></td>
+          <td>
+            HW 4 <b><font color="red">due on Sunday</font></b>
+          </td>
         </tr>
 
   </tbody>
