add exam 1 info

--- a/index.html
+++ b/index.html
@@ -745,7 +745,9 @@
               <li>Textbook p354-364, p368-370</li>
             </ol>
           </td>
-          <td></td>
+          <td>
+            <a href="materials/Exam1_Info_3011_F22.pdf">Exam 1 Information</a> <b><font color="green">out</font></b>
+          </td>
           <td>
             HW 4 <b><font color="red">due on Sunday</font></b>
           </td>
