--- a/index.html
+++ b/index.html
@@ -734,6 +734,9 @@
             <br>
             [<a href="slides/Chapter8.pdf">slides</a>]
             [<a href="code/chapter8.R">code</a>]
+            <br>
+            <br>
+            Exam 1 Review
           </td>
       
           <td>
@@ -741,8 +744,7 @@
             <ol>
               <li>Handout Chapter 8.2.1</li>
               <li>Textbook p334-353, p365-368</li>
-              <li>Handout Chapter 8.2.2</li>
-              <li>Textbook p354-364, p368-370</li>
+              <li><a href="materials/Exam1_Info_3011_F22.pdf">Exam 1 Information</a></li>
             </ol>
           </td>
           <td>
