add material to 1017

--- a/index.html
+++ b/index.html
@@ -765,9 +765,13 @@
             Suggested Readings:
             <ol>
               <li><a href="materials/Exam1_Info_3011_F22.pdf">Exam 1 Information</a></li>
+              <li><a href="slides/0923_Lecture_Probability_Review.pdf">Review on Probability (0923 Lecture Notes)</a></li>
+              <li><a href="https://xmind.works/#/share/6xlxBfbG">Chapter 1-8 Mindmap</a></li>
             </ol>
           </td>
-          <td></td>
+          <td>
+            HW 3 Grade <b><font color="green">out</font></b>
+          </td>
           <td></td>
         </tr>
         
@@ -781,7 +785,9 @@
               <li><a href="materials/old_exams.zip">Old Exams</a></li>
             </ol>
           </td>
-          <td></td>
+          <td>
+            HW 4 Solution <b><font color="green">out</font></b>
+          </td>
           <td></td>
           </tr>
 
