--- a/index.html
+++ b/index.html
@@ -838,7 +838,25 @@
           <td></td>
         </tr>
 
-
+        <tr>
+          <td>Mon Oct 24</td>
+          <td>
+            Chapter 9: Hypothesis Tests
+            <br>
+            [<a href="slides/Chapter9.pdf">slides</a>]
+            [<a href="code/chapter9.R">code</a>]
+          </td>
+      
+          <td>
+            Suggested Readings:
+            <ol>
+              <li>Handout Chapter 9.1, 9.2</li>
+              <li>Textbook p386-405</li>
+            </ol>
+          </td>
+          <td></td>
+          <td></td>
+        </tr>
 
   </tbody>
 </table>
