add hw5 and lab5

--- a/index.html
+++ b/index.html
@@ -834,7 +834,9 @@
               <li>Textbook p354-364, p368-370</li>
             </ol>
           </td>
-          <td></td>
+          <td>
+            <a href="homework/HW5Problems.pdf">HW 5</a> <b><font color="green">out</font></b>
+          </td>
           <td></td>
         </tr>
 
@@ -858,6 +860,19 @@
           <td></td>
         </tr>
 
+        <tr class="warning">
+          <td>Tue Oct 25</td>
+          <td>Lab 5
+          </td>
+          <td>
+            Suggested Readings:
+            <ol>
+              <li><a href="lab/Lab5_3011_F22.pdf">Lab 5 Handout</a></li>
+            </ol>
+          </td>
+          <td></td>
+          <td></td>
+          </tr>
   </tbody>
 </table>
 </div> 
