--- a/index.html
+++ b/index.html
@@ -873,6 +873,27 @@
           <td></td>
           <td></td>
           </tr>
+
+        <tr>
+          <td>Wed Oct 26</td>
+          <td>
+            Chapter 9: Hypothesis Tests
+            <br>
+            [<a href="slides/Chapter9.pdf">slides</a>]
+            [<a href="code/chapter9.R">code</a>]
+          </td>
+      
+          <td>
+            Suggested Readings:
+            <ol>
+              <li>Handout Chapter 9.1, 9.2</li>
+              <li>Textbook p386-405</li>
+            </ol>
+          </td>
+          <td></td>
+          <td></td>
+        </tr>
+
   </tbody>
 </table>
 </div> 
