--- a/index.html
+++ b/index.html
@@ -894,6 +894,28 @@
           <td></td>
         </tr>
 
+        <tr>
+          <td>Fri Oct 28</td>
+          <td>
+            Chapter 9: Hypothesis Tests
+            <br>
+            [<a href="slides/Chapter9.pdf">slides</a>]
+            [<a href="code/chapter9.R">code</a>]
+          </td>
+      
+          <td>
+            Suggested Readings:
+            <ol>
+              <li>Handout Chapter 9.3, 9.4, 9.5</li>
+              <li>Textbook p408-430</li>
+            </ol>
+          </td>
+          <td>
+            HW 6 <b><font color="green">out</font></b>
+          </td>
+          <td></td>
+        </tr>
+
   </tbody>
 </table>
 </div> 
