--- a/index.html
+++ b/index.html
@@ -809,7 +809,12 @@
 
         <tr class="warning">
           <td>Thu Oct 20</td>
-          <td>Mid-term Exam 1
+          <td>
+            Mid-term Exam 1
+            <br>
+            [<a href="exams/Exam1TypeA_3011_F22.pdf">Exam 1A</a>]
+            [<a href="exams/Exam1TypeB_3011_F22.pdf">Exam 1B</a>]
+            [<a href="exams/Exam1TypeC_3011_F22.pdf">Exam 1C</a>]
           </td>
           <td>
             <i class="fa fa-clock-o"></i> 5:00pm - 6:30pm<br>Anderson Hall 310
@@ -890,7 +895,9 @@
               <li>Textbook p386-405</li>
             </ol>
           </td>
-          <td></td>
+          <td>
+            Exam 1 Solutions <b><font color="green">out</font></b>
+          </td>
           <td></td>
         </tr>
 
