update chapter 9; add chapter10; add hw6 and lab6

--- a/index.html
+++ b/index.html
@@ -918,10 +918,73 @@
             </ol>
           </td>
           <td>
-            HW 6 <b><font color="green">out</font></b>
+            <a href="homework/HW6Problems.pdf">HW 6</a> <b><font color="green">out</font></b>
           </td>
           <td></td>
         </tr>
+
+        <tr>
+          <td>Mon Oct 31</td>
+          <td>
+            Chapter 9: Hypothesis Tests
+            <br>
+            [<a href="slides/Chapter9.pdf">slides</a>]
+            [<a href="code/chapter9.R">code</a>]
+            <br>
+            <br>
+            Chapter 10: Comparing Two Groups
+            <br>
+            [<a href="slides/Chapter10.pdf">slides</a>]
+            [<a href="code/chapter10.R">code</a>]
+          </td>
+      
+          <td>
+            Suggested Readings:
+            <ol>
+              <li>Handout Chapter 9.4, 9.5</li>
+              <li>Handout Chapter 10.3, 10.2</li>
+              <li>Textbook p460-462, p465-469, p487 - 492</li>
+            </ol>
+          </td>
+          <td></td>
+          <td>
+            HW 5 <b><font color="red">due</font></b>
+          </td>
+        </tr>
+
+        <tr class="warning">
+          <td>Tue Nov 1</td>
+          <td>Lab 6
+          </td>
+          <td>
+            Suggested Readings:
+            <ol>
+              <li><a href="lab/Lab6_3011_F22.pdf">Lab 6 Handout</a></li>
+            </ol>
+          </td>
+          <td></td>
+          <td></td>
+          </tr>
+
+          <tr>
+            <td>Wed Nov 2</td>
+            <td>
+              Chapter 10: Comparing Two Groups
+              <br>
+              [<a href="slides/Chapter10.pdf">slides</a>]
+              [<a href="code/chapter10.R">code</a>]
+            </td>
+        
+            <td>
+              Suggested Readings:
+              <ol>
+                <li>Handout Chapter 10.3, 10.2</li>
+                <li>Textbook p460-462, p465-469, p487 - 492</li>
+              </ol>
+            </td>
+            <td></td>
+            <td></td>
+          </tr>
 
   </tbody>
 </table>
