update chap10; update exam1 info

--- a/index.html
+++ b/index.html
@@ -943,7 +943,7 @@
             <ol>
               <li>Handout Chapter 9.4, 9.5</li>
               <li>Handout Chapter 10.3, 10.2</li>
-              <li>Textbook p460-462, p465-469, p487 - 492</li>
+              <li>Textbook p460-462, p465-469, p487-492</li>
             </ol>
           </td>
           <td></td>
@@ -979,11 +979,38 @@
               Suggested Readings:
               <ol>
                 <li>Handout Chapter 10.3, 10.2</li>
-                <li>Textbook p460-462, p465-469, p487 - 492</li>
+                <li>Textbook p460-462, p465-469, p487-492</li>
+              </ol>
+            </td>
+            <td>
+              Exam 1 Grade</a> <b><font color="green">out</font></b>
+            </td>
+            <td></td>
+          </tr>
+
+          <tr>
+            <td>Fri Nov 4</td>
+            <td>
+              Chapter 10: Comparing Two Groups
+              <br>
+              [<a href="slides/Chapter10.pdf">slides</a>]
+              [<a href="code/chapter10.R">code</a>]
+              <br>
+              <br>
+              Mid-term Exam 1 Q&A
+            </td>
+        
+            <td>
+              Suggested Readings:
+              <ol>
+                <li>Handout Chapter 10.2</li>
+                <li>Textbook p460-462, p465-469, p487-492</li>
               </ol>
             </td>
             <td></td>
-            <td></td>
+            <td>
+              HW 6 <b><font color="red">due on Sunday</font></b>
+            </td>
           </tr>
 
   </tbody>
