--- a/index.html
+++ b/index.html
@@ -1007,12 +1007,67 @@
                 <li>Textbook p460-462, p465-469, p487-492</li>
               </ol>
             </td>
-            <td></td>
+            <td>
+              <a href="homework/HW7Problems.pdf">HW 7</a> <b><font color="green">out</font></b>
+            </td>
             <td>
               HW 6 <b><font color="red">due on Sunday</font></b>
             </td>
           </tr>
 
+          <tr>
+            <td>Mon Nov 7</td>
+            <td>
+              Chapter 14: Analysis of Variance
+              <br>
+              [<a href="slides/Chapter14.pdf">slides</a>]
+              [<a href="code/chapter14.R">code</a>]
+            </td>
+        
+            <td>
+              Suggested Readings:
+              <ol>
+                <li>Handout Chapter 14.1, 14.2</li>
+                <li>Textbook p669-684</li>
+              </ol>
+            </td>
+            <td></td>
+            <td></td>
+          </tr>
+
+          <tr class="warning">
+            <td>Tue Nov 8</td>
+            <td>Lab 7
+            </td>
+            <td>
+              Suggested Readings:
+              <ol>
+                <li><a href="lab/Lab7_3011_F22.pdf">Lab 7 Handout</a></li>
+              </ol>
+            </td>
+            <td></td>
+            <td></td>
+            </tr>
+
+          <tr>
+            <td>Wed Nov 9</td>
+            <td>
+              Chapter 14: Analysis of Variance
+              <br>
+              [<a href="slides/Chapter14.pdf">slides</a>]
+              [<a href="code/chapter14.R">code</a>]
+            </td>
+        
+            <td>
+              Suggested Readings:
+              <ol>
+                <li>Handout Chapter 14.1, 14.2</li>
+                <li>Textbook p669-684</li>
+              </ol>
+            </td>
+            <td></td>
+            <td></td>
+          </tr>
   </tbody>
 </table>
 </div> 
