--- a/index.html
+++ b/index.html
@@ -861,7 +861,9 @@
               <li>Textbook p386-405</li>
             </ol>
           </td>
-          <td></td>
+          <td>
+            HW 4 Grade <b><font color="green">out</font></b>
+          </td>
           <td></td>
         </tr>
 
@@ -962,7 +964,9 @@
               <li><a href="lab/Lab6_3011_F22.pdf">Lab 6 Handout</a></li>
             </ol>
           </td>
-          <td></td>
+          <td>
+            HW 5 Solution <b><font color="green">out</font></b>
+          </td>
           <td></td>
           </tr>
 
@@ -1031,7 +1035,9 @@
                 <li>Textbook p669-684</li>
               </ol>
             </td>
-            <td></td>
+            <td>
+              HW 5 Grade <b><font color="green">out</font></b>
+            </td>
             <td></td>
           </tr>
 
